MMA-7478 Gjer forbetringar på dokmetkonsumenten
- Ta i bruk webclient på dokmetkonsumenten
- Bruk spring-security-oauth2-client for henting av Azure-token
- Reduser mengda data som blir henta frå Dokmet
- Rydd opp i exceptionhandtering og returner 500 ved problem mot ekstern teneste
- Rydd opp i itest og bytt til webclient
- Oppdater dokmet-testfiler