@@ -10,27 +10,24 @@ import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Primary;
 import org.springframework.context.annotation.Profile;
 
-import java.util.Arrays;
+import java.util.List;
 
-import static java.util.concurrent.TimeUnit.MINUTES;
+import static java.util.concurrent.TimeUnit.DAYS;
 
 @Configuration
 @EnableCaching
 public class CacheConfig {
 
-	public static final String DOKMET_DOKUMENT_TYPE_INFO_CACHE = "DOKUMENT_TYPE_INFO";
-	public static final String AZURE_CLIENT_CREDENTIAL_TOKEN_CACHE = "AZUREAD";
+	public static final String DOKMET_CACHE = "dokmetCache";
 
 	@Bean
 	@Primary
 	@Profile({"nais", "local"})
 	CacheManager cacheManager() {
 		SimpleCacheManager manager = new SimpleCacheManager();
-		manager.setCaches(Arrays.asList(
-				new CaffeineCache(AZURE_CLIENT_CREDENTIAL_TOKEN_CACHE, Caffeine.newBuilder()
-						.expireAfterWrite(50, MINUTES).build()),
-				new CaffeineCache(DOKMET_DOKUMENT_TYPE_INFO_CACHE, Caffeine.newBuilder()
-						.expireAfterWrite(60, MINUTES).build())
+		manager.setCaches(List.of(
+				new CaffeineCache(DOKMET_CACHE, Caffeine.newBuilder()
+						.expireAfterWrite(1, DAYS).build())
 		));
 		return manager;
 	}
